--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #db290f; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #444; margin-bottom: 3px; text-shadow: 1px 1px 2px #AAA; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #db290f; }
-    h3 { text-align: center; color: #db290f; }
-    a { color: #db290f; }
+		h2 { font-size: 1.5em; color: #444; text-shadow: 1px 1px 2px #AAA; }
+    h3 { text-align: center; color: #444; text-shadow: 1px 1px 2px #AAA; }
+    a { color: #444; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -52,20 +52,43 @@
       Sync and watch your github watch list.
     </div>
 
-    <p>Github Watcher is a GTK+ desktop application that monitors your Github watch list and keeps a synced copy of each watched repository on your local machine.
-
-Not really.  It does everything it is supposed to, up to a point.  I haven't got it all the way debugged, and to be honest it needs some re-writes because I was in a hurry the first time.  But it will download and sync your repos, just not consistently over a long period of time.</p><h2>Dependencies</h2>
-<p>There may be others I'm not remembering, but here are some definites.
-
-* Python 2.5-ish <http://www.python.org>
-* py-github <http://github.com/dustin/py-github>
-* Git Python <http://packages.python.org/GitPython/>
-* PyGTK 2.0 <http://www.pygtk.org>
+    <p>Github Watcher is a GTK+ desktop application that monitors your Github watch list and keeps a synced copy of each watched repository on your local machine.</p>
+		<p>It's not really ready for consumption.  It does everything it is supposed to, up to a point.  I haven't got it all the way debugged, and to be honest it needs some re-writes because I was in a hurry the first time.  But it will download and sync your repos, just not consistently over a long period of time.</p><h2>Dependencies</h2>
+<p>There may be others I'm not remembering, but here are some definites.</p>
+<p>
+* <a href="http://www.python.org/">Python 2.5-ish </a><br/>
+* <a href="http://github.com/dustin/py-github">py-github </a><br/>
+* <a href="http://packages.python.org/GitPython/">Git Python </a><br/>
+* <a href="http://www.pygtk.org/">PyGTK 2.0 </a><br/>
 * A Unix type system</p>
+<h2>Screen Shot</h2>
+<p><img src="images/screenshot.8c0d64d.png" /></p>
 <h2>Install</h2>
 <p>Clone the repo and run watcher.py</p>
-<h2>License</h2>
-<p>MIT</p>
+<h2>License (MIT)</h2>
+<p>
+<pre>
+Copyright (c) 2010 John Hobbs
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+</pre>
+</p>
 <h2>Authors</h2>
 <p>John Hobbs (john@velvetcache.org)<br/><br/>      </p>
 <h2>Contact</h2>
