Updated index page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </div>
 
     <p>Github Watcher is a GTK+ desktop application that monitors your Github watch list and keeps a synced copy of each watched repository on your local machine.</p>
-		<p>It's not really ready for consumption.  It does everything it is supposed to, up to a point.  I haven't got it all the way debugged, and to be honest it needs some re-writes because I was in a hurry the first time.  But it will download and sync your repos, just not consistently over a long period of time.</p><h2>Dependencies</h2>
+
+<h2>Dependencies</h2>
 <p>There may be others I'm not remembering, but here are some definites.</p>
 <p>
 * <a href="http://www.python.org/">Python 2.5-ish </a><br/>
@@ -64,7 +65,7 @@
 <h2>Screen Shot</h2>
 <p><img src="images/screenshot.8c0d64d.png" /></p>
 <h2>Install</h2>
-<p>Clone the repo and run watcher.py</p>
+<p>Clone the repo, edit config.ini and run watcher.py</p>
 <h2>License (MIT)</h2>
 <p>
 <pre>
